Git_WGBH_QC/src/objects/Giving_Summary__c.object
<CustomObject>
    <fields>
        <fullName>third_mem_yr_amt__c</fullName>
        <description>Third Mem Yr Amt</description>
        <inlineHelpText>Third Mem Yr Amt</inlineHelpText>
        <label>Third Mem Yr Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>third_mem_yr_pd__c</fullName>
        <description>Third Mem Yr Pd</description>
        <inlineHelpText>Third Mem Yr Pd</inlineHelpText>
        <label>Third Mem Yr Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>third_mem_yr_renew_amt__c</fullName>
        <description>Third Mem Yr Renew Amt</description>
        <inlineHelpText>Third Mem Yr Renew Amt</inlineHelpText>
        <label>Third Mem Yr Renew Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>third_mem_yr_renew_date__c</fullName>
        <description>Third Mem Yr Renew Date</description>
        <inlineHelpText>Third Mem Yr Renew Date</inlineHelpText>
        <label>Third Mem Yr Renew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>third_mem_yr_renew_source__c</fullName>
        <label>Third Mem Yr Renew Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_amt__c</fullName>
        <description>TA: total_amt</description>
        <inlineHelpText>Total pledged in donor&apos;s lifetime for this station or Giving Summary.</inlineHelpText>
        <label>Total Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_cnt__c</fullName>
        <description>Total Cnt</description>
        <inlineHelpText>Total Cnt</inlineHelpText>
        <label>Total Cnt</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_pd__c</fullName>
        <description>TA: total_pd</description>
        <inlineHelpText>Total paid in donor&apos;s lifetime for this station or Giving Summary.</inlineHelpText>
        <label>Total Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_pmts__c</fullName>
        <description>Total Pmts</description>
        <inlineHelpText>Total Pmts</inlineHelpText>
        <label>Total Pmts</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_renew_amt__c</fullName>
        <description>Total Renew Amt</description>
        <inlineHelpText>Total Renew Amt</inlineHelpText>
        <label>Total Renew Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_renew_cnt__c</fullName>
        <description>Total Renew Cnt</description>
        <inlineHelpText>Total Renew Cnt</inlineHelpText>
        <label>Total Renewal Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>track__c</fullName>
        <description>TA: track</description>
        <inlineHelpText>Gift type and Response mechanism tied to the renewal donation for this Giving Summary.  For example: New by Pledge or Renew by Email.</inlineHelpText>
        <label>Track</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>work_amt__c</fullName>
        <description>Work Amt</description>
        <inlineHelpText>Work Amt</inlineHelpText>
        <label>Work Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>work_date__c</fullName>
        <description>Work Date</description>
        <inlineHelpText>Work Date</inlineHelpText>
        <label>Work Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>work_pd__c</fullName>
        <description>Work Pd</description>
        <inlineHelpText>Work Pd</inlineHelpText>
        <label>Work Pd</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>work_source__c</fullName>
        <label>Work</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Giving Summary</label>
    <nameField>
        <displayFormat>GS#-{0000000000}</displayFormat>
        <label>Giving Summary #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Summaries</pluralLabel>
    <recordTypes>
        <fullName>Annual_Giving</fullName>
        <active>true</active>
        <label>Annual Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Auction_Giving</fullName>
        <active>true</active>
        <label>Auction Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Capital_Campaign_Giving</fullName>
        <active>true</active>
        <label>Capital Campaign Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Giving</fullName>
        <active>true</active>
        <label>Event Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation_Giving</fullName>
        <active>true</active>
        <label>Foundation Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Kind_Gifts</fullName>
        <active>true</active>
        <label>In-Kind Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matching_Gifts</fullName>
        <active>true</active>
        <label>Matching Gift Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planned_Giving</fullName>
        <active>true</active>
        <label>Planned Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restricted_Giving</fullName>
        <active>true</active>
        <label>Restricted Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Giving</fullName>
        <active>true</active>
        <label>Sales Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Underwriting</fullName>
        <active>true</active>
        <label>Underwriting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer_Giving</fullName>
        <active>true</active>
        <label>Volunteer Giving</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>